--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Expense Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Including jsPDF library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -17,6 +18,7 @@
         </form>
         <div id="expense-list"></div>
         <h3>Total Expenses: $<span id="total-expenses">0</span></h3>
+        <button id="download-pdf">Download PDF</button>
     </div>
     <script src="script.js"></script>
 </body>
