--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Including jsPDF library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <!-- Firebase Configuration and Initialization -->
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+        import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-analytics.js";
+        
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCuZjmFa2O_ewTSfGUsR2JvI6VrLwhPgB8",
+            authDomain: "monthly-expenses-database.firebaseapp.com",
+            projectId: "monthly-expenses-database",
+            storageBucket: "monthly-expenses-database.appspot.com",
+            messagingSenderId: "642658298752",
+            appId: "1:642658298752:web:965f1052061cd0cb182f65",
+            measurementId: "G-K8CKBLMXY4"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+
+        // Add this to import functions in script.js as module
+        window.db = db;
+        window.addDoc = addDoc;
+        window.getDocs = getDocs;
+        window.deleteDoc = deleteDoc;
+        window.doc = doc;
+        window.collection = collection;
+    </script>
 </head>
 <body>
     <div class="container">
@@ -20,6 +51,6 @@
         <h3>Total Expenses: $<span id="total-expenses">0</span></h3>
         <button id="download-pdf">Download PDF</button>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
