decimal values input considered

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Monthly Expense Tracker</h1>
         <form id="expense-form">
             <input type="text" id="description" placeholder="Enter description" required>
-            <input type="number" id="amount" placeholder="Enter amount" required>
+            <input type="number" id="amount" placeholder="Enter amount" step="0.01" required>
             <button type="submit">Add Expense</button>
         </form>
         <div id="expense-list"></div>
