--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Including jsPDF library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <!-- Including Chart.js library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,6 +20,9 @@
         </form>
         <div id="expense-list"></div>
         <h3>Total Expenses: $<span id="total-expenses">0</span></h3>
+        <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+            <canvas id="expenseChart"></canvas>
+        </div>
         <button id="download-pdf">Download PDF</button>
     </div>
     <script src="script.js"></script>
