added dark mode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <h1>Monthly Expense Tracker</h1>
+        <button id="toggle-dark-mode">Toggle Dark Mode</button>
         <form id="expense-form">
             <input type="text" id="description" placeholder="Enter description" required>
             <input type="number" id="amount" placeholder="Enter amount" step="0.01" required>
