--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </form>
         <div id="expense-list"></div>
         <h3>Total Expenses: $<span id="total-expenses">0</span></h3>
-        <div class="chart-container" style="position: relative; height:40vh; width:80vw">
+        <div class="chart-container" style="position: relative; height:40vh; width:auto">
             <canvas id="expenseChart"></canvas>
         </div>
         <button id="download-pdf">Download PDF</button>
