updated css and contact container

--- a/index.html
+++ b/index.html
@@ -27,5 +27,14 @@
         <button id="download-pdf">Download PDF</button>
     </div>
     <script src="script.js"></script>
+
+    <div class="contact-container">
+        <h2>Contact the Creator</h2>
+        <p>If you have any questions or feedback, please feel free to reach out.</p>
+        <p>Name: Darsh Chaurasia</p>
+        <p>Website: <a href="https://darshchaurasia.com" target="_blank">darshchaurasia.com</a></p>
+        <p>Email: <a href="mailto:darshchaurasia@gmail.com">darshchaurasia@gmail.com</a></p>
+    </div>
+    
 </body>
 </html>
