--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Expense Tracker</title>
@@ -25,6 +26,7 @@
             <canvas id="expenseChart"></canvas>
         </div>
         <button id="download-pdf">Download PDF</button>
+        <button id="download-csv">Download CSV</button>
     </div>
     <script src="script.js"></script>
 
